--- a/src/ButtonRaised/styles.css
+++ b/src/ButtonRaised/styles.css
@@ -18,6 +18,7 @@
 }
 
 .text {
+    width: 100%;
     font-size: 14px;
     line-height: 24px;
     font-weight: normal;
